#3983 Fix colour of hamburger menu in light theme so it is visible

--- a/stroom-app/src/main/resources/ui/css/components.css
+++ b/stroom-app/src/main/resources/ui/css/components.css
@@ -1475,7 +1475,9 @@
 
 button.main-menu {
     background-color: transparent;
-    color: white;
+    /*color: var(--navigation-icon-button__color);*/
+    color: var(--text-color);
+    opacity: 0.6;
 }
 
 button.main-menu svg {
